[project]
name = "cfq"
version = "0.1.1"
description = "A high-level Cloudflare Queues consumer library for Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudflare>=4.3.1",
]

[tool.setuptools.packages.find]
include = ["cfq"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "TID"]

[tool.ruff.format]
quote-style = "single"